crates/hm-plugin-protocol/tests/snapshots/schema_snapshots__docker_commit_args.snap
---
source: crates/hm-plugin-protocol/tests/schema_snapshots.rs
expression: schema_for!(DockerCommitArgs)
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "DockerCommitArgs",
  "description": "Host-fn argument struct for `hm_docker_commit`.",
  "type": "object",
  "required": [
    "container_id",
    "tag"
  ],
  "properties": {
    "container_id": {
      "type": "string"
    },
    "tag": {
      "type": "string"
    }
  }
}
