crates/hm-plugin-protocol/tests/snapshots/schema_snapshots__docker_exec_args.snap
---
source: crates/hm-plugin-protocol/tests/schema_snapshots.rs
expression: schema_for!(DockerExecArgs)
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "DockerExecArgs",
  "description": "Host-fn argument struct for `hm_docker_exec`.",
  "type": "object",
  "required": [
    "cmd",
    "container_id",
    "env",
    "workdir"
  ],
  "properties": {
    "container_id": {
      "type": "string"
    },
    "cmd": {
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "env": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    },
    "workdir": {
      "type": "string"
    },
    "stdin_archive_id": {
      "description": "When `Some`, piped into the exec'd process's stdin (closed after the write so the process sees EOF). Used for tar-extract.",
      "type": [
        "string",
        "null"
      ],
      "format": "uuid"
    }
  }
}
