crates/hm-plugin-protocol/tests/snapshots/schema_snapshots__docker_extract_args.snap
---
source: crates/hm-plugin-protocol/tests/schema_snapshots.rs
expression: schema_for!(DockerExtractArgs)
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "DockerExtractArgs",
  "description": "Host-fn argument struct for `hm_docker_extract_workspace`.",
  "type": "object",
  "required": [
    "archive_id",
    "container_id",
    "workdir"
  ],
  "properties": {
    "container_id": {
      "type": "string"
    },
    "archive_id": {
      "type": "string",
      "format": "uuid"
    },
    "workdir": {
      "type": "string"
    }
  }
}
