crates/hm-plugin-protocol/tests/snapshots/schema_snapshots__docker_start_args.snap
---
source: crates/hm-plugin-protocol/tests/schema_snapshots.rs
expression: schema_for!(DockerStartArgs)
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "DockerStartArgs",
  "description": "Host-fn argument struct for `hm_docker_start_container`.",
  "type": "object",
  "required": [
    "env",
    "image",
    "name_hint",
    "workdir"
  ],
  "properties": {
    "image": {
      "type": "string"
    },
    "env": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      }
    },
    "workdir": {
      "type": "string"
    },
    "name_hint": {
      "type": "string"
    }
  }
}
