crates/hm-plugin-protocol/tests/snapshots/schema_snapshots__plugin_manifest.snap
---
source: crates/hm-plugin-protocol/tests/schema_snapshots.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "PluginManifest",
  "description": "Returned by an Extism plugin's `hm_manifest()` export.",
  "type": "object",
  "required": [
    "api_version",
    "capabilities",
    "description",
    "name",
    "required_host_fns",
    "version"
  ],
  "properties": {
    "api_version": {
      "description": "Must equal [`crate::HM_PLUGIN_API_VERSION`] or the host rejects the plugin at load time.",
      "type": "integer",
      "format": "uint32",
      "minimum": 0.0
    },
    "name": {
      "description": "Stable plugin identifier, e.g. `harmont-docker`. Used as the key in the registry and in error messages.",
      "type": "string"
    },
    "version": {
      "type": "string",
      "pattern": "^(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)(?:-((?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\.(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\+([0-9a-zA-Z-]+(?:\\.[0-9a-zA-Z-]+)*))?$"
    },
    "description": {
      "type": "string"
    },
    "capabilities": {
      "type": "array",
      "items": {
        "$ref": "#/definitions/Capability"
      }
    },
    "required_host_fns": {
      "description": "Host functions the plugin needs. Load fails fast if any are not exported by this build of `hm`.",
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "config_schema": {
      "description": "Optional JSON Schema describing plugin-specific configuration that lives in the project's `.harmont/plugins.toml`."
    },
    "allowed_hosts": {
      "description": "HTTPS hosts the plugin is permitted to contact via `extism_pdk::http::request`. Defaults to empty (no HTTP). The host wires this into extism's per-instance manifest at load time; attempting to contact a host not in this list fails inside the plugin.",
      "default": [],
      "type": "array",
      "items": {
        "type": "string"
      }
    }
  },
  "definitions": {
    "Capability": {
      "oneOf": [
        {
          "type": "object",
          "required": [
            "about",
            "args_schema",
            "kind",
            "subcommands",
            "verb"
          ],
          "properties": {
            "kind": {
              "type": "string",
              "enum": [
                "subcommand"
              ]
            },
            "verb": {
              "description": "Top-level verb under `hm`. Two plugins may not claim the same `verb`.",
              "type": "string"
            },
            "about": {
              "type": "string"
            },
            "args_schema": {
              "description": "Clap-shaped JSON for argument parsing (the host re-parses on the plugin's behalf via `clap`)."
            },
            "subcommands": {
              "type": "array",
              "items": {
                "$ref": "#/definitions/SubcommandSpec"
              }
            }
          }
        },
        {
          "type": "object",
          "required": [
            "default",
            "kind",
            "runner"
          ],
          "properties": {
            "kind": {
              "type": "string",
              "enum": [
                "step_executor"
              ]
            },
            "runner": {
              "description": "Matched against `CommandStep.runner` at dispatch time.",
              "type": "string"
            },
            "default": {
              "description": "At most one plugin may set `default: true`. The host runs that executor when a step omits `runner`.",
              "type": "boolean"
            },
            "step_schema": {
              "description": "Optional JSON Schema for `CommandStep.runner_args`. The host validates `runner_args` against this schema before dispatch."
            }
          }
        },
        {
          "type": "object",
          "required": [
            "events",
            "kind",
            "phase",
            "timeout_ms"
          ],
          "properties": {
            "kind": {
              "type": "string",
              "enum": [
                "lifecycle_hook"
              ]
            },
            "events": {
              "type": "array",
              "items": {
                "$ref": "#/definitions/HookEventKind"
              }
            },
            "phase": {
              "$ref": "#/definitions/HookPhase"
            },
            "timeout_ms": {
              "type": "integer",
              "format": "uint32",
              "minimum": 0.0
            }
          }
        },
        {
          "type": "object",
          "required": [
            "kind",
            "mime",
            "name"
          ],
          "properties": {
            "kind": {
              "type": "string",
              "enum": [
                "output_formatter"
              ]
            },
            "name": {
              "description": "Selected via `--format <name>` on the command line.",
              "type": "string"
            },
            "mime": {
              "description": "Advisory MIME type written into `--format <name> --output <file>` headers.",
              "type": "string"
            }
          }
        }
      ]
    },
    "SubcommandSpec": {
      "type": "object",
      "required": [
        "about",
        "args_schema",
        "subcommands",
        "verb"
      ],
      "properties": {
        "verb": {
          "description": "Top-level verb under `hm`. Two plugins may not claim the same `verb`.",
          "type": "string"
        },
        "about": {
          "type": "string"
        },
        "args_schema": {
          "description": "Clap-shaped JSON for argument parsing (the host re-parses on the plugin's behalf via `clap`)."
        },
        "subcommands": {
          "type": "array",
          "items": {
            "$ref": "#/definitions/SubcommandSpec"
          }
        }
      }
    },
    "HookEventKind": {
      "description": "Subset of [`crate::hook::HookEvent`] discriminants used at manifest time.\n\nThe manifest declares *what* events the plugin wants, not the per-event payload. Kept in this file so plugin authors only import one module.",
      "type": "string",
      "enum": [
        "build_start",
        "step_queued",
        "step_start",
        "step_log",
        "step_cache_hit",
        "step_end",
        "build_end"
      ]
    },
    "HookPhase": {
      "oneOf": [
        {
          "description": "May return [`HookOutcome::Abort`] to fail the build.",
          "type": "string",
          "enum": [
            "before"
          ]
        },
        {
          "description": "Read-only; the return value is discarded.",
          "type": "string",
          "enum": [
            "after"
          ]
        }
      ]
    }
  }
}
